# vim: set noexpandtab:

2012-09-21
	* Update grabbing the .env file for the Btag SF. Default is w/ JVF. 
	Use function arg to get the noJVF file/

2012-09-19 Matt
	* Fixed DilTrigLogic to not check trigger for MC, just checks the region.
	* Changed constructor DilTrigLogic to not require isMC bool, always initialize the reweight tool now
	
2012-09-19 Steve
	* Added ptcone30ElStyle to Muon class
	* Added passMllForAlpgen flag for adding low mass Alpgen to Sherpa Z
	* Added D3PDTag enum for controlling d3pd branch changes
	* Tagging SusyNtuple-00-00-28

2012-09-19 Serhan Mete <amete@cern.ch>
	* Root/SusyNtTools.cxx: Update getMetRel and passTopTag for the latest recommendations
	* Root/SusyNtAna.cxx: Added extra JetVector (m_signalJets2Lep) to getSignalObjects(...)
	* SusyNtuple/SusyNtAna.h: Define the above JetVector
	* Root/SusyNtTools.cxx: Added multiple functions to select/count signal jets for 2 Leptons analysis 
	* SusyNtuple/SusyNtTools.h: Added multiple functions to select/count signal jets for 2 Leptons analysis

2012-09-18 Steve
	* Added truthMatchType flag to Lepton class
	* Added isChargeFlip flag to Electron class

2012-09-18 Matt 
	* Added NtSys_TRIGSF_UP(_DN) to SusyDefs so accomodate new trigger package 
	* Increased event ClassDef number to reflect changes above.
	* Updated DilTrigLogic:
	      * getTriggerWeight -- Use this to get overall event weight.
	      * Updated constructor which takes a string for which maps to use. Default is A-X (ie. all!)
	* DilTrigLogic now dependent on DGTriggerReweight. Added to install script	

2012-09-18 Serhan Mete <amete@cern.ch>
	* scripts/install.sh: Switch SUSYTools to 00-01-07
	* SusyNtuple/SusyDefs.h: Added SusyNtSystNames and BTagSysNames
				 Human-readable definitions for systematics 

2012-09-17 Steve
	* Update event weight functions for A-D
	* Remove wPileup1fb from Event class
	* Tagging SusyNtuple-00-00-27

2012-09-14 Matt
	* Added susyFinalState to the ntuple

2012-09-12 Matt